// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente <GifGrid /> Debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    test
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABX"
      key="ABX"
      title="título del gif"
      url="url aquí"
    />
  </div>
</Fragment>
`;

exports[`Pruebas al componente <GifGrid /> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    test
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
